[package]
name = "ecom-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
env_logger = "0.10.0"
pwhash = "1.0.0"
serde =  { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["async-std-runtime", "bson-chrono-0_4"]
